# 301_GroupProject

./: .gitignore  ARCHITECTURE.md  CHANGES_SUMMARY.txt  CMakeCache.txt  CMakeLists.txt  FINAL_SUMMARY.txt  MESSAGE_PASSING_DEMO.md  Makefile  MessagePassingSystem.c  MultikernelOSMessagingSimulation.cpp  PRESENTATION_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README (Kernel) .md  README.md  README_FOR_TEAM.md  WEB_README.md  build_and_test.sh  cmake_install.cmake  core_kernel.cpp  demo_visualization.html  main.cpp  multikernel.h  multikernel_os  multikernel_system.cpp  performance_metrics.h  run_demo.sh  smp_system.h  tests.cpp  web_server.py
web_templates/: index.html
